[gd_scene load_steps=5 format=2]

[ext_resource path="res://crabArmIk.gd" type="Script" id=1]
[ext_resource path="res://assets/Slug/Crab Arm/crab_arm_clawA.png" type="Texture" id=2]
[ext_resource path="res://assets/Slug/Crab Arm/crab_arm_clawB.png" type="Texture" id=3]
[ext_resource path="res://assets/Slug/Crab Arm/crab_arm_bi.png" type="Texture" id=4]

[node name="base" type="Position2D"]
script = ExtResource( 1 )

[node name="CrabArmBi" type="Sprite" parent="."]
position = Vector2( 15, -2 )
scale = Vector2( 1, -1 )
texture = ExtResource( 4 )

[node name="elbow" type="Position2D" parent="."]
position = Vector2( 25, 0 )

[node name="CrabArmClawA" type="Sprite" parent="elbow"]
position = Vector2( 20, -4 )
scale = Vector2( 1, -1 )
z_index = -1
texture = ExtResource( 2 )

[node name="Node2D" type="Node2D" parent="elbow/CrabArmClawA"]
position = Vector2( -45, -4 )
scale = Vector2( 1, -1 )

[node name="wrist" type="Position2D" parent="elbow"]
position = Vector2( 21, 0 )

[node name="CrabArmClawB" type="Sprite" parent="elbow/wrist"]
position = Vector2( 7, 0 )
scale = Vector2( 1, -1 )
z_index = -2
texture = ExtResource( 3 )

[node name="tip" type="Position2D" parent="elbow/wrist"]
position = Vector2( 17, 0 )

[node name="target" type="KinematicBody2D" parent="."]
position = Vector2( 63, 0 )
